<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.billbook.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editcount"
        android:importantForAutofill="no"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/type"
        android:textSize="20sp" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenditure" />

        <RadioButton
            android:id="@+id/radioIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editdesc"
        android:importantForAutofill="no"
        android:inputType="number" />
    <Button
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/overview"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvinfo"
        android:textSize="20sp" />
    <Button
        android:id="@+id/situation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/situation" />

</LinearLayout>